--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 /.bundle/
 /lib/bundler/man/
 
+## Foreman
+.env
+
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
 # Gemfile.lock
